--- a/MusicGAN.ipynb
+++ b/MusicGAN.ipynb
@@ -7804,12 +7804,12 @@
         "preview_sample(f\"{base_name}_10.mid\")"
       ],
       "metadata": {
-        "id": "kKgHsyttQMM5",
-        "outputId": "7dbed69a-8e85-48bc-acfa-0bd37a64f203",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "kKgHsyttQMM5",
+        "outputId": "7dbed69a-8e85-48bc-acfa-0bd37a64f203"
       },
       "id": "kKgHsyttQMM5",
       "execution_count": 33,
@@ -7945,11 +7945,11 @@
         "!zip -r generetedMIDI.zip generated"
       ],
       "metadata": {
-        "id": "fVnnwvtMrfc7",
-        "outputId": "2c78bb59-22be-46f1-f520-c636ba739228",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fVnnwvtMrfc7",
+        "outputId": "2c78bb59-22be-46f1-f520-c636ba739228"
       },
       "id": "fVnnwvtMrfc7",
       "execution_count": 34,
@@ -8075,11 +8075,125 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "generated_midis = list(glob.glob(\"generated/*.mid\"))"
+      ],
       "metadata": {
         "id": "ZF1Oh-LCr-Nu"
       },
       "id": "ZF1Oh-LCr-Nu",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def pitch_count(notes):\n",
+        "    \"\"\"\n",
+        "    notes: list of int (pitch values)\n",
+        "    \"\"\"\n",
+        "    return len(notes)\n",
+        "\n",
+        "\n",
+        "def note_density(notes, total_duration_sec):\n",
+        "    \"\"\"\n",
+        "    notes: list of notes\n",
+        "    total_duration_sec: duration of piece in seconds\n",
+        "    \"\"\"\n",
+        "    return len(notes) / total_duration_sec if total_duration_sec > 0 else 0\n",
+        "\n",
+        "from collections import Counter\n",
+        "\n",
+        "def rote_memorization_frequency(notes, pattern_length=3):\n",
+        "    \"\"\"\n",
+        "    Return average number of repetitions for note patterns of length `pattern_length`\n",
+        "    \"\"\"\n",
+        "    patterns = [tuple(notes[i:i+pattern_length]) for i in range(len(notes)-pattern_length+1)]\n",
+        "    counts = Counter(patterns)\n",
+        "    repeated = [count for pattern, count in counts.items() if count > 1]\n",
+        "    return np.mean(repeated) if repeated else 0\n",
+        "\n",
+        "def pitch_intervals(notes):\n",
+        "    \"\"\"\n",
+        "    Returns average absolute pitch interval between consecutive notes\n",
+        "    \"\"\"\n",
+        "    if len(notes) < 2:\n",
+        "        return 0\n",
+        "    intervals = [abs(notes[i] - notes[i-1]) for i in range(1, len(notes))]\n",
+        "    return np.mean(intervals)\n",
+        "\n",
+        "def pitch_class_histogram(notes):\n",
+        "    \"\"\"\n",
+        "    Returns normalized histogram over 12 pitch classes\n",
+        "    \"\"\"\n",
+        "    hist = np.zeros(12)\n",
+        "    for pitch in notes:\n",
+        "        hist[pitch % 12] += 1\n",
+        "    total = np.sum(hist)\n",
+        "    return hist / total if total > 0 else hist\n",
+        "\n",
+        "from scipy.special import rel_entr\n",
+        "\n",
+        "def kld(p, q):\n",
+        "    \"\"\"\n",
+        "    Kullback-Leibler Divergence between distributions p and q\n",
+        "    p, q: numpy arrays representing probability distributions\n",
+        "    \"\"\"\n",
+        "    p = np.asarray(p, dtype=np.float64) + 1e-12  # avoid zeros\n",
+        "    q = np.asarray(q, dtype=np.float64) + 1e-12\n",
+        "    p /= p.sum()\n",
+        "    q /= q.sum()\n",
+        "    return np.sum(rel_entr(p, q))\n"
+      ],
+      "metadata": {
+        "id": "oArdUPEkwql5"
+      },
+      "id": "oArdUPEkwql5",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def compute_all_metrics(generated_notes, real_notes=None, total_duration_sec=30.0):\n",
+        "    metrics = {\n",
+        "        \"Pitch Count\": pitch_count(generated_notes),\n",
+        "        \"Note Density\": note_density(generated_notes, total_duration_sec),\n",
+        "        \"Rote Memorization\": rote_memorization_frequency(generated_notes),\n",
+        "        \"Pitch Interval\": pitch_intervals(generated_notes),\n",
+        "        \"Pitch Class Histogram\": pitch_class_histogram(generated_notes),\n",
+        "    }\n",
+        "\n",
+        "    if real_notes is not None:\n",
+        "        metrics[\"PCH KLD\"] = kld(\n",
+        "            metrics[\"Pitch Class Histogram\"],\n",
+        "            pitch_class_histogram(real_notes)\n",
+        "        )\n",
+        "\n",
+        "    return metrics\n"
+      ],
+      "metadata": {
+        "id": "fPAqknZhxJ_S"
+      },
+      "id": "fPAqknZhxJ_S",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "metrics = compute_all_metrics(generated_notes, real_notes)\n",
+        "\n",
+        "for name, value in metrics.items():\n",
+        "    if isinstance(value, np.ndarray):\n",
+        "        print(f\"{name}: {value.round(3)}\")\n",
+        "    else:\n",
+        "        print(f\"{name}: {value:.3f}\")\n"
+      ],
+      "metadata": {
+        "id": "PysFRXOPxtX1"
+      },
+      "id": "PysFRXOPxtX1",
       "execution_count": null,
       "outputs": []
     }
