--- a/MusicGAN22_1.ipynb
+++ b/MusicGAN22_1.ipynb
@@ -36,7 +36,7 @@
         }
       },
       "id": "AqOIVfaDzibR",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -124,7 +124,7 @@
         "id": "vHlq93Nkv4KI"
       },
       "id": "vHlq93Nkv4KI",
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -143,7 +143,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "initial_id",
       "metadata": {
         "collapsed": true,
@@ -1488,7 +1488,7 @@
         }
       },
       "id": "9GwSOJl1v4iX",
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1694,7 +1694,7 @@
         }
       },
       "id": "OSsYeAP2Tm0C",
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1719,7 +1719,7 @@
         "id": "GSnNChioTnTp"
       },
       "id": "GSnNChioTnTp",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1886,7 +1886,7 @@
         }
       },
       "id": "50ZRpSJ0gBPP",
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6931,16 +6931,12 @@
         "            results.append(obj)\n",
         "    return results\n",
         "\n",
-        "\n",
-        "# Collect JSON file paths\n",
         "train_jsons = Path(\"tokenized_train\").resolve().rglob(\"*.json\")\n",
         "valid_jsons = Path(\"tokenized_valid\").resolve().rglob(\"*.json\")\n",
         "\n",
-        "# Load datasets\n",
         "train_data = load_multiple_jsons(train_jsons)\n",
         "valid_data = load_multiple_jsons(valid_jsons)\n",
         "\n",
-        "# Summary\n",
         "if train_data and valid_data:\n",
         "    print(f\"\\nLoaded {len(train_data)} JSON files for training.\")\n",
         "    print(f\"Loaded {len(valid_data)} JSON files for validation.\")\n",
@@ -6955,7 +6951,7 @@
         }
       },
       "id": "ePyht0BuzxQa",
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7004,7 +7000,6 @@
         "            arrays.append(np.asarray(obj[\"ids\"][0], dtype=np.int32))\n",
         "    return np.concatenate(arrays, axis=0)\n",
         "\n",
-        "\n",
         "all_ids_train = extract_ids(train_data)\n",
         "all_ids_valid = extract_ids(valid_data)"
       ],
@@ -7012,7 +7007,7 @@
         "id": "TpskPd966QJN"
       },
       "id": "TpskPd966QJN",
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7085,7 +7080,7 @@
         "id": "QdpuEdReJzaP"
       },
       "id": "QdpuEdReJzaP",
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7138,7 +7133,7 @@
         "id": "gsmfpiPCJ800"
       },
       "id": "gsmfpiPCJ800",
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7235,7 +7230,7 @@
         "id": "x4yiz-pS6kbC"
       },
       "id": "x4yiz-pS6kbC",
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7255,7 +7250,7 @@
     {
       "cell_type": "code",
       "source": [
-        "class GAN:\n",
+        "class MidiGAN:\n",
         "    def __init__(\n",
         "        self,\n",
         "        generator: nn.Module,\n",
@@ -7265,9 +7260,6 @@
         "        tokenizer,\n",
         "        loss_fn: nn.Module = nn.BCEWithLogitsLoss(),\n",
         "    ):\n",
-        "        \"\"\"\n",
-        "        GAN class to train a generator and discriminator.\n",
-        "        \"\"\"\n",
         "        self.generator = generator\n",
         "        self.discriminator = discriminator\n",
         "        self.noise_dim = noise_dim\n",
@@ -7285,6 +7277,21 @@
         "\n",
         "        self.generator.apply(self._init_weights)\n",
         "        self.discriminator.apply(self._init_weights)\n",
+        "\n",
+        "    def save(self, filepath: str):\n",
+        "        \"\"\"Save the whole MidiGAN instance to disk.\"\"\"\n",
+        "        torch.save(self, filepath)\n",
+        "        print(f\"MidiGAN saved to {filepath}\")\n",
+        "\n",
+        "    @staticmethod\n",
+        "    def load(filepath: str, map_location: str = \"cpu\"):\n",
+        "        \"\"\"Load a previously saved MidiGAN instance.\"\"\"\n",
+        "        gan = torch.load(filepath, map_location=map_location)\n",
+        "        if not isinstance(gan, MidiGAN):\n",
+        "            raise TypeError(\"The loaded object is not a MidiGAN instance.\")\n",
+        "        print(f\"MidiGAN loaded from {filepath}\")\n",
+        "        return gan\n",
+        "\n",
         "\n",
         "    def train(\n",
         "        self,\n",
@@ -7413,14 +7420,6 @@
         "        ]\n",
         "        return np.mean(discriminator_losses), np.mean(generator_losses)\n",
         "\n",
-        "    def save_generator(self, filepath: str):\n",
-        "        \"\"\"Save generator weights to disk.\"\"\"\n",
-        "        torch.save(self.generator.state_dict(), filepath)\n",
-        "\n",
-        "    def save_discriminator(self, filepath: str):\n",
-        "        \"\"\"Save discriminator weights to disk.\"\"\"\n",
-        "        torch.save(self.discriminator.state_dict(), filepath)\n",
-        "\n",
         "    def predict(self, n_samples: int, device: torch.device):\n",
         "        \"\"\"Generate output from the generator as NumPy arrays.\"\"\"\n",
         "        noise = self._sample_noise(n_samples, device)\n",
@@ -7445,7 +7444,7 @@
         "id": "xvld5t80-WWv"
       },
       "id": "xvld5t80-WWv",
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7486,7 +7485,7 @@
         "id": "dXdahVJAU2Gd"
       },
       "id": "dXdahVJAU2Gd",
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7566,7 +7565,7 @@
         "outputId": "6c789fb2-284d-4294-8fe6-182c1b42746c"
       },
       "id": "Iagq9bP3EiGq",
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7610,7 +7609,7 @@
         "outputId": "edd574e7-2a7a-4289-efbd-1623379a89aa"
       },
       "id": "wF3cfjF3IA2G",
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8285,7 +8284,7 @@
         }
       },
       "id": "s3zCHAK2uw7X",
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8302,6 +8301,8 @@
     {
       "cell_type": "code",
       "source": [
+        "gan_mini.save(\"gan_mini.pth\")\n",
+        "\n",
         "generator_mini = generator\n",
         "discriminator_mini = discriminator"
       ],
@@ -8309,7 +8310,7 @@
         "id": "965fJVJ-L4kn"
       },
       "id": "965fJVJ-L4kn",
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8382,7 +8383,7 @@
         }
       },
       "id": "5oRsYxfYLKSi",
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8426,7 +8427,7 @@
         }
       },
       "id": "HS5_fBX9LQMa",
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9103,7 +9104,7 @@
         }
       },
       "id": "TAtANdICcwG-",
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -9120,6 +9121,8 @@
     {
       "cell_type": "code",
       "source": [
+        "gan_medium.save(\"gan_medium.pth\")\n",
+        "\n",
         "generator_medium = generator\n",
         "discriminator_medium = discriminator"
       ],
@@ -9127,7 +9130,7 @@
         "id": "T56cyEiZ10Zc"
       },
       "id": "T56cyEiZ10Zc",
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -9928,6 +9931,8 @@
     {
       "cell_type": "code",
       "source": [
+        "gan_large.save(\"gan_large.pth\")\n",
+        "\n",
         "generator_large = generator\n",
         "discriminator_large = discriminator"
       ],
@@ -9988,7 +9993,7 @@
         "id": "K3uRn2PBVbAH"
       },
       "id": "K3uRn2PBVbAH",
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -10021,7 +10026,7 @@
         "outputId": "7fc7fb98-c7bc-4473-ccc0-ec347a9cadf1"
       },
       "id": "PbJ_VlEfVgWj",
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10210,7 +10215,7 @@
         "outputId": "0d486362-6cc0-4486-b143-d859185609ba"
       },
       "id": "usYASEHPVCdv",
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10598,7 +10603,7 @@
         "outputId": "2303c712-1c23-46ed-a580-6c865e20f0fd"
       },
       "id": "7miRRCTFc5Qr",
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10647,7 +10652,7 @@
         "outputId": "838c11eb-b37b-4ee8-f2a9-4210605929d0"
       },
       "id": "twbhlfGkdm4l",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11200,7 +11205,7 @@
         "id": "eMDf1KpbT5YM"
       },
       "id": "eMDf1KpbT5YM",
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -11236,7 +11241,7 @@
         "id": "IrzKgXlAWKEY"
       },
       "id": "IrzKgXlAWKEY",
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -11298,7 +11303,7 @@
         "id": "oArdUPEkwql5"
       },
       "id": "oArdUPEkwql5",
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -11335,7 +11340,7 @@
         "outputId": "3e8fccb0-f1d4-4777-f5c4-9abf432b06b1"
       },
       "id": "fPAqknZhxJ_S",
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11392,7 +11397,7 @@
         }
       },
       "id": "S60LohMRx0zj",
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
