Creato con Colab

--- a/MusicGAN22_11_33.ipynb
+++ b/MusicGAN22_11_33.ipynb
@@ -13577,17 +13577,17 @@
         "        self.generator.apply(self._init_weights)\n",
         "        self.discriminator.apply(self._init_weights)\n",
         "\n",
-        "    def save(self, filepath: str):\n",
-        "        torch.save(self, filepath)\n",
-        "        print(f\"MidiGAN saved to {filepath}\")\n",
+        "    def save_generator(self, filepath: str):\n",
+        "        torch.save(self.generator.state_dict(), filepath)\n",
+        "        print(f\"Generator weights saved to {filepath}\")\n",
         "\n",
         "    @staticmethod\n",
-        "    def load(filepath: str, map_location: str = \"cpu\"):\n",
-        "        gan = torch.load(filepath, map_location=map_location)\n",
-        "        if not isinstance(gan, MidiGAN):\n",
-        "            raise TypeError(\"The loaded object is not a MidiGAN instance.\")\n",
-        "        print(f\"MidiGAN loaded from {filepath}\")\n",
-        "        return gan\n",
+        "    def load_generator(generator_class, filepath: str, map_location: str = \"cpu\", **gen_kwargs):\n",
+        "        generator = generator_class(**gen_kwargs)\n",
+        "        state_dict = torch.load(filepath, map_location=map_location)\n",
+        "        generator.load_state_dict(state_dict)\n",
+        "        print(f\"Generator weights loaded from {filepath}\")\n",
+        "        return generator\n",
         "\n",
         "    def train(\n",
         "        self,\n",
@@ -13964,6 +13964,38 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "gan_mini.save_generator(\"generator_weights.pth\")"
+      ],
+      "metadata": {
+        "id": "Hzc-9RkazYBO"
+      },
+      "id": "Hzc-9RkazYBO",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "load generator mini"
+      ],
+      "metadata": {
+        "id": "BV0jQg7GzekB"
+      },
+      "id": "BV0jQg7GzekB"
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Q2AouvZAzhtj"
+      },
+      "id": "Q2AouvZAzhtj",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
