Creato con Colab

--- a/Music-GAN.ipynb
+++ b/Music-GAN.ipynb
@@ -29,7 +29,7 @@
       ],
       "metadata": {
         "id": "AqOIVfaDzibR",
-        "outputId": "81536e7d-f889-4b03-8c63-877e112578fc",
+        "outputId": "cfe50260-1f59-45f5-919b-ce4dc622b488",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -43,16 +43,16 @@
           "text": [
             "Collecting miditok\n",
             "  Downloading miditok-3.0.6.post1-py3-none-any.whl.metadata (10 kB)\n",
-            "Requirement already satisfied: huggingface-hub>=0.16.4 in /usr/local/lib/python3.12/dist-packages (from miditok) (0.35.0)\n",
+            "Requirement already satisfied: huggingface-hub>=0.16.4 in /usr/local/lib/python3.12/dist-packages (from miditok) (0.35.3)\n",
             "Requirement already satisfied: numpy>=1.19 in /usr/local/lib/python3.12/dist-packages (from miditok) (2.0.2)\n",
             "Collecting symusic>=0.5.0 (from miditok)\n",
             "  Downloading symusic-0.5.8-cp312-cp312-manylinux_2_27_x86_64.manylinux_2_28_x86_64.whl.metadata (9.0 kB)\n",
-            "Requirement already satisfied: tokenizers>=0.13.0 in /usr/local/lib/python3.12/dist-packages (from miditok) (0.22.0)\n",
+            "Requirement already satisfied: tokenizers>=0.13.0 in /usr/local/lib/python3.12/dist-packages (from miditok) (0.22.1)\n",
             "Requirement already satisfied: tqdm in /usr/local/lib/python3.12/dist-packages (from miditok) (4.67.1)\n",
             "Requirement already satisfied: filelock in /usr/local/lib/python3.12/dist-packages (from huggingface-hub>=0.16.4->miditok) (3.19.1)\n",
             "Requirement already satisfied: fsspec>=2023.5.0 in /usr/local/lib/python3.12/dist-packages (from huggingface-hub>=0.16.4->miditok) (2025.3.0)\n",
             "Requirement already satisfied: packaging>=20.9 in /usr/local/lib/python3.12/dist-packages (from huggingface-hub>=0.16.4->miditok) (25.0)\n",
-            "Requirement already satisfied: pyyaml>=5.1 in /usr/local/lib/python3.12/dist-packages (from huggingface-hub>=0.16.4->miditok) (6.0.2)\n",
+            "Requirement already satisfied: pyyaml>=5.1 in /usr/local/lib/python3.12/dist-packages (from huggingface-hub>=0.16.4->miditok) (6.0.3)\n",
             "Requirement already satisfied: requests in /usr/local/lib/python3.12/dist-packages (from huggingface-hub>=0.16.4->miditok) (2.32.4)\n",
             "Requirement already satisfied: typing-extensions>=3.7.4.3 in /usr/local/lib/python3.12/dist-packages (from huggingface-hub>=0.16.4->miditok) (4.15.0)\n",
             "Requirement already satisfied: hf-xet<2.0.0,>=1.1.3 in /usr/local/lib/python3.12/dist-packages (from huggingface-hub>=0.16.4->miditok) (1.1.10)\n",
@@ -64,30 +64,31 @@
             "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.12/dist-packages (from requests->huggingface-hub>=0.16.4->miditok) (2.5.0)\n",
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.12/dist-packages (from requests->huggingface-hub>=0.16.4->miditok) (2025.8.3)\n",
             "Downloading miditok-3.0.6.post1-py3-none-any.whl (159 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m159.0/159.0 kB\u001b[0m \u001b[31m2.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m159.0/159.0 kB\u001b[0m \u001b[31m16.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading symusic-0.5.8-cp312-cp312-manylinux_2_27_x86_64.manylinux_2_28_x86_64.whl (2.5 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.5/2.5 MB\u001b[0m \u001b[31m25.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.5/2.5 MB\u001b[0m \u001b[31m94.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading pySmartDL-1.3.4-py3-none-any.whl (20 kB)\n",
             "Installing collected packages: pySmartDL, symusic, miditok\n",
             "Successfully installed miditok-3.0.6.post1 pySmartDL-1.3.4 symusic-0.5.8\n",
             "Collecting pretty_midi\n",
-            "  Downloading pretty_midi-0.2.10.tar.gz (5.6 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.6/5.6 MB\u001b[0m \u001b[31m31.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "  Downloading pretty_midi-0.2.11.tar.gz (5.6 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.6/5.6 MB\u001b[0m \u001b[31m102.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Requirement already satisfied: numpy>=1.7.0 in /usr/local/lib/python3.12/dist-packages (from pretty_midi) (2.0.2)\n",
             "Collecting mido>=1.1.16 (from pretty_midi)\n",
             "  Downloading mido-1.3.3-py3-none-any.whl.metadata (6.4 kB)\n",
             "Requirement already satisfied: six in /usr/local/lib/python3.12/dist-packages (from pretty_midi) (1.17.0)\n",
+            "Requirement already satisfied: importlib_resources in /usr/local/lib/python3.12/dist-packages (from pretty_midi) (6.5.2)\n",
             "Requirement already satisfied: packaging in /usr/local/lib/python3.12/dist-packages (from mido>=1.1.16->pretty_midi) (25.0)\n",
             "Downloading mido-1.3.3-py3-none-any.whl (54 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m54.6/54.6 kB\u001b[0m \u001b[31m3.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m54.6/54.6 kB\u001b[0m \u001b[31m7.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hBuilding wheels for collected packages: pretty_midi\n",
             "  Building wheel for pretty_midi (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for pretty_midi: filename=pretty_midi-0.2.10-py3-none-any.whl size=5592286 sha256=a0cb16e9c380d49ebde769e38b3fb56b391685a32a23d22764b1abb2fb796e1d\n",
-            "  Stored in directory: /root/.cache/pip/wheels/a4/f9/9e/08350c27e386558df0ae234e28a8facd145ba45506ddd1b989\n",
+            "  Created wheel for pretty_midi: filename=pretty_midi-0.2.11-py3-none-any.whl size=5595886 sha256=09e225200d2c7136aa94ff8dea7bb3a847f620b6d4d976c5052bf9d0efbee645\n",
+            "  Stored in directory: /root/.cache/pip/wheels/f4/ad/93/a7042fe12668827574927ade9deec7f29aad2a1001b1501882\n",
             "Successfully built pretty_midi\n",
             "Installing collected packages: mido, pretty_midi\n",
-            "Successfully installed mido-1.3.3 pretty_midi-0.2.10\n"
+            "Successfully installed mido-1.3.3 pretty_midi-0.2.11\n"
           ]
         }
       ]
@@ -421,7 +422,7 @@
       "source": [
         "## Dataset preparation\n",
         "\n",
-        "organizes a MIDI dataset by collecting all MIDI files, splitting them into train/validation subsets, and then applying preprocessing steps. Specifically, it chunks the training and validation files into sequences suitable for modeling, applies data augmentation (pitch, velocity, duration variations), and finally reloads the processed files for each subset."
+        "organizes a MIDI dataset by collecting all MIDI files, splitting them into train/test subsets, and then applying preprocessing steps. Specifically, it chunks the training and test files into sequences suitable for modeling, applies data augmentation (pitch, velocity, duration variations), and finally reloads the processed files for each subset."
       ],
       "metadata": {
         "id": "PXUg4P5Wsv7P"
@@ -4184,7 +4185,7 @@
         "id": "oArdUPEkwql5"
       },
       "id": "oArdUPEkwql5",
-      "execution_count": 10,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -4290,7 +4291,7 @@
         "outputId": "638f47a9-ca44-4a5b-eeb3-33c974e41a95"
       },
       "id": "gEuJcBbrz5a9",
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4413,7 +4414,7 @@
         "outputId": "e98c6451-5c4a-4d36-f576-8a2742e6b744"
       },
       "id": "yCZ6dVp-0SDb",
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4456,7 +4457,7 @@
         "outputId": "b11878ac-4f1a-4707-b341-53c775799fe1"
       },
       "id": "S60LohMRx0zj",
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4584,7 +4585,7 @@
         "train_seqs_3 = preprocess_real_midi_folder(\"dataset_test/\", sequence_length=3)\n",
         "rm_mini_5 = calculate_rm_midi_preprocessed(\"generated_mini/\", train_seqs_5, sequence_length=5)\n",
         "rm_mini_3 = calculate_rm_midi_preprocessed(\"generated_mini/\", train_seqs_3, sequence_length=3)\n",
-        "print(\"Rote Memorization Frequency in training set: \\n\")\n",
+        "print(\"Rote Memorization Frequency in testing set: \\n\")\n",
         "print(\"Rote Memorization Frequency mini: \\n\")\n",
         "print(\"Rote Memorization Frequency 3:\", rm_mini_3 * 100, \"%\")\n",
         "print(\"Rote Memorization Frequency 5:\", rm_mini_5 * 100, \"%\")\n",
@@ -4604,37 +4605,37 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d27bf492-9e21-4f86-f37c-c1265cc5ebe6"
+        "outputId": "0c89452e-a739-44a0-b320-ebe549007c17"
       },
       "id": "pt198fpnjn2g",
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 150/150 [00:01<00:00, 97.65it/s] \n",
-            "100%|██████████| 150/150 [00:01<00:00, 97.48it/s] \n"
+            "100%|██████████| 150/150 [00:01<00:00, 144.55it/s]\n",
+            "100%|██████████| 150/150 [00:01<00:00, 146.75it/s]\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Rote Memorization Frequency in training set: \n",
+            "Rote Memorization Frequency in testing set: \n",
             "\n",
             "Rote Memorization Frequency mini: \n",
             "\n",
-            "Rote Memorization Frequency 3: 1.6446176150779268 %\n",
-            "Rote Memorization Frequency 5: 2.736976553234194 %\n"
+            "Rote Memorization Frequency 3: 1.9096592968466837 %\n",
+            "Rote Memorization Frequency 5: 3.1817352431347508 %\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 150/150 [00:01<00:00, 98.95it/s] \n",
-            "100%|██████████| 150/150 [00:01<00:00, 98.76it/s] \n"
+            "100%|██████████| 150/150 [00:01<00:00, 149.02it/s]\n",
+            "100%|██████████| 150/150 [00:01<00:00, 149.72it/s]\n"
           ]
         },
         {
@@ -4643,16 +4644,16 @@
           "text": [
             "Rote Memorization Frequency medium: \n",
             "\n",
-            "Rote Memorization Frequency 3: 3.010102874013932 %\n",
-            "Rote Memorization Frequency 5: 5.028568774097645 %\n"
+            "Rote Memorization Frequency 3: 1.5915486460303547 %\n",
+            "Rote Memorization Frequency 5: 2.64783759929391 %\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 150/150 [00:01<00:00, 104.28it/s]\n",
-            "100%|██████████| 150/150 [00:01<00:00, 95.09it/s]"
+            "100%|██████████| 150/150 [00:00<00:00, 159.56it/s]\n",
+            "100%|██████████| 150/150 [00:00<00:00, 159.42it/s]"
           ]
         },
         {
@@ -4661,8 +4662,8 @@
           "text": [
             "Rote Memorization Frequency large: \n",
             "\n",
-            "Rote Memorization Frequency 3: 1.833358175585035 %\n",
-            "Rote Memorization Frequency 5: 3.0535115382690092 %\n"
+            "Rote Memorization Frequency 3: 2.161275898047399 %\n",
+            "Rote Memorization Frequency 5: 3.604144766481453 %\n"
           ]
         },
         {
@@ -4805,8 +4806,10 @@
     },
     "colab": {
       "provenance": [],
-      "machine_shape": "hm"
-    }
+      "machine_shape": "hm",
+      "gpuType": "L4"
+    },
+    "accelerator": "GPU"
   },
   "nbformat": 4,
   "nbformat_minor": 5
